--- a/docs/WRITING.3.texi
+++ b/docs/WRITING.3.texi
@@ -10,23 +10,19 @@
 @doctitle @@uref tests
 @docauthor Alper Ersoy
 @docauthor Tim Janik
-@revision{Document revised:}
-@*
+@center @revision{Document revised:}
 
 This document is used as a markup and document generation testbed
 and covers a few examples, e.g. for linking to other documents.
 
-@*
-@code{@@docfont@{ARG@}} styles:
-@*
+@code{@@docfont@{ARG@}} styles:@*
 Possible parameters to @code{@@docfont} are: @code{tech}, @code{techstyle},
-@code{sans}, @code{sans-serif} for Sans Serif, and @code{story},
-@code{storystyle}, @code{serif} for Serif.  Default is @code{serif} on all
+@code{sans}, @code{sans-serif} for Sans Serif; @code{story},
+@code{storystyle}, @code{serif} for Serif; and @code{mono}, @code{monospace},
+@code{fixed} for Monospace. Default is @code{serif} on all
 outputs.
 
-@*
 Link Styles:
-@*
 
 HTTP:
 @itemize
@@ -97,5 +93,59 @@ Unknown (ie. gopher):
 @item @code{@@uref@{gopher://gopher.gtk.org, Gtk+ Gopher@}}: @uref{gopher://gopher.gtk.org, Gtk+ Gopher}
 @item @code{@@uref@{gopher://gopher.gtk.org,, Gtk+ Gopher@}}: @uref{gopher://gopher.gtk.org,, Gtk+ Gopher}
 @end itemize
+
+Block Enclosing Commands:
+
+This is a regular paragraph that should be used normal text flow. Text is
+filled, no indentation and no change made to the document font.  you get if
+you do not use any commands.
+
+@quotation
+This is a @code{@@quotation} block. It should be used to indicate text that
+is quoted. The text is filled, indented and printed in a roman font by
+default.
+@end quotation
+
+@example
+This is a @code{@@example} block. Illustrate code, commands,
+and the like. The text is printed in a fixed-width font,
+and indented but not filled.
+@end example
+
+@smallexample
+This is a @code{@@smallexample} block. Same as @code{@@example}, except
+that in TeX this command typesets text in a smaller font.
+@end smallexample
+
+@lisp
+This is a @code{@@lisp} block. Like @code{@@example}, but specifically
+for illustrating Lisp code. The text is printed in a
+fixed-width font, and indented but not filled.
+@end lisp
+
+@smalllisp
+This is a @code{@@smalllisp} block. It is to @code{@@lisp} as @code{@@smallexample}
+is to @code{@@example}.
+@end smalllisp
+
+@display
+This is a @code{@@display} block. Display illustrative text. The text is indented
+but not filled, and no font is selected (so, by default, the font is roman).
+@end display
+
+@smalldisplay
+This is a @code{@@smalldisplay} block. It is to @code{@@display} as @code{@@smallexample}
+is to @code{@@example}.
+@end smalldisplay
+
+@format
+This is a @code{@@format} block. Like @code{@@display} (the text is not
+filled and no font is selected), but the text is not indented.
+@end format
+
+@smallformat
+This is a @code{@@smallformat} block. It is to @code{@@format} as @code{@@smallexample}
+is to @code{@@example}.
+@end smallformat
 
 @bye
