--- a/docs/release-notes.texi
+++ b/docs/release-notes.texi
@@ -11,44 +11,48 @@
 
 @unnumbered RELEASE-NOTES
 
-@keepspaceSTART
-		Much has changed in the new development series (v0.4) of BEAST.
-		In brief (specifics can be found in the @uref{beast-doc://news,,NEWS section}), the
-		GUI was majorly polished, many new synthesis features have
-		been added and support for various external wave file formats
-		was implemented.
-@keepspaceEND
+@displaySTART
+Much has changed in the new development series (v0.4) of BEAST.
+In brief (specifics can be found in the @uref{beast-doc://release-news,,NEWS section}), the
+GUI was majorly polished, many new synthesis features have
+been added and support for various external wave file formats
+was implemented.
+@displayEND
 
-@keepspaceSTART
-		The current version is already good enough to perform
-		interesting synthesis tasks and to have lots of fun with
-		songs, external MIDI devices and samples.
-		However, this is still an ALPHA version, so things might
-		not always work as expected, reports about misbehaviour
-		are welcome.
-@keepspaceEND
+@displaySTART
+The current version is already good enough to perform
+interesting synthesis tasks and to have lots of fun with
+songs, external MIDI devices and samples.
+However, this is still an ALPHA version, so things might
+not always work as expected, reports about misbehaviour
+are welcome.
+@displayEND
 
-@keepspaceSTART
-		Be warned though, the .bse file format hasn't fully stabelized
-		yet, so incompatibilities whith future versions may occour.
-@keepspaceEND
+@displaySTART
+Be warned though, the .bse file format hasn't fully stabelized
+yet, so incompatibilities whith future versions may occour.
+@displayEND
 
-@keepspaceSTART
-		A good starting point are the test files shipped in the
-		tests/ subdirectory of the source package, or the Quick Start
-		Guide in the Help menu.
-@keepspaceEND
+@displaySTART
+A good starting point are the test files shipped in the
+tests/ subdirectory of the source package, or the Quick Start
+Guide in the Help menu.
+@displayEND
 
-@keepspaceSTART
-		For uptodate information on BEAST development, please visit:
-@keepspaceEND
+@displaySTART
+For uptodate information on BEAST development, please visit:
+@displayEND
 
-@center		@uref{http://beast.gtk.org}
+@displaySTART
+	@uref{http://beast.gtk.org}
+@displayEND
 
-@keepspaceSTART
-		Questions, comments, bug reports and similar stuff should be sent to:
-@keepspaceEND
+@displaySTART
+Questions, comments, bug reports and similar stuff should be sent to:
+@displayEND
 
-@center		@uref{mailto://beast@@beast.gtk.org}
+@displaySTART
+	@uref{mailto://beast@@beast.gtk.org}
+@displayEND
 
 @bye
