--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+Tue Dec 31 18:17:44 2002  Tim Janik  <timj@gtk.org>
+
+	* docs/site-news.texi: moved most of this into site-oldnews.texi.
+
+	* docs/generated/Makefile.am: support @sedfix{top_srcdir} substitutions
+	when copying .texi files to get ${top_srcdir} used by texi files.
+
+	* docs/site-navigation.xml: sketched new website structure.
+
+	* docs/site-development.texi:
+	* docs/site-historic.texi:
+	* docs/site-oldnews.texi: new website pages according to the new
+	website structure.
+
 Tue Dec 31 10:47:04 2002  Tim Janik  <timj@gtk.org>
 
 	* docs/site-news.texi: merge current and old website news into
