--- a/docs/site-oldnews.texi
+++ b/docs/site-oldnews.texi
@@ -1,6 +1,6 @@
 \input texinfo
 @c %**start of header
-@settitle BEAST/BSE News
+@settitle Ancient BEAST/BSE News
 @c %**end of header
 
 @include teximacros.texi
