--- a/docs/site-documentation.texi
+++ b/docs/site-documentation.texi
@@ -13,12 +13,12 @@
 
 @beast comes with a very basic synthesis tutorial about how
 to get synthesis going for new users, the
-@uref{http://beast.gtk.org/quickstart.html,, BEAST/BSE Quick Start Guide}.
+@uref{beast-doc://quickstart,, BEAST/BSE Quick Start Guide}.
 
 Tutorials and documentation about audio synthesis in general is
 currently not covered by @beast or this website, we've collected
 a number of interesting links to articles on this subject in the
-@uref{http://beast.gtk.org/links-synthesis.html,, Synthesis Links}
+@uref{beast-doc://links-synthesis,, Synthesis Links}
 section however.
 
 
@@ -30,13 +30,13 @@ With the development release 0.4.1, @bse added support for the
 since can be scripted in Scheme.
 
 The
-@uref{http://beast.gtk.org/bse-procs.3.html,, procedure} and
-@uref{http://beast.gtk.org/bse-structs.3.html,, structure} references
+@uref{beast-man://3/bse-procs,, procedure} and
+@uref{beast-man://3/bse-structs,, structure} references
 cover the supported interfaces to access @bse functionality from C or
 Scheme.
 
 For C specifically,
-@uref{http://beast.gtk.org/sfi.3.html,, SFI} provides the necessary
+@uref{beast-man://3/sfi,, SFI} provides the necessary
 @uref{http://gtk.org,, GLib} based framework to deal with
 threads, notes, parameters (properties), records, sequences, time stamps
 and generic values. Users of SFI will probably also appreciate the
