--- a/docs/site-historic.texi
+++ b/docs/site-historic.texi
@@ -12,11 +12,11 @@
 
 For the sake of completeness, and for curious readers, we're
 keeping
-@uref{http://beast.gtk.org/oldnews.html,,old website news}.
+@uref{beast-doc://oldnews,,old website news}.
 
 In March 2000 we started a contest to find a logo for BEAST, and beyond
 the actually selected logo, we also got a number of other interesting
 submissions, which can still be found on the
-@uref{http://beast.gtk.org/logo-submissions.html,,logo submissions} page.
+@uref{beast-doc://logo-submissions/,,logo submissions} page.
 
 @bye
