--- a/docs/site-resources.texi
+++ b/docs/site-resources.texi
@@ -9,12 +9,12 @@
 @unnumbered Links
 
 We're maintaining a
-@uref{http://beast.gtk.org/links-synthesis.html,, collection of selected links}
+@uref{beast-doc://links-synthesis,, collection of selected links}
 to articles and other writings about audio synthesis for people
 interested in reading up on the topics.
 
 And there is of course a
-@uref{http://beast.gtk.org/links-related.html,, collection} of links to related
+@uref{beast-doc://links-related,, collection} of links to related
 or subsidiary projects.
 
 
