--- a/docs/site-development.texi
+++ b/docs/site-development.texi
@@ -14,9 +14,8 @@ There are various documents in CVS that track the current development state.
 Every major part has it's own ChangeLog (see links in the sidebar) and for
 overall track keeping, the release specific NEWS are also maintained:
 
-@docfont{mono}
-@format
+@example
 @verbatiminclude @sedfix{top_srcdir}/NEWS
-@end format
+@end example
 
 @bye
