--- a/docs/site-oldnews.texi
+++ b/docs/site-oldnews.texi
@@ -11,6 +11,20 @@
 @unnumbered What Was New? (Ancient News)
 
 
+@news_title{Friday 23 Aug 2002, Logo Contest Winner}
+
+And the winner is... @strong{jimmac}!
+
+jimmac's entry is decided to be the official logo for Beast/BSE. The upcoming
+release will feature the winner image as a splash screen, and the logo will
+appear here once the website is facelifted. The current release candidates are
+actually featuring the winner image.
+
+We want to specially thank everyone who sent an entry. You may visit the
+contest entries at the
+@uref{beast-doc://logo-submissions/,,logo submissions} page.
+
+
 @news_title{Saturday 27 Jul 2002, Hold your breath}
 
 Tim has put lots of work into our new toy, Piano Roll Editor, and it shows.
