added config option invert_sustain to support sustain pedals which report
Sat Jan  4 15:34:28 2003  Tim Janik  <timj@gtk.org>

        * bsemidireceiver.c (process_midi_control_L):
        * bsemidievent.c (bse_midi_signal_default):
        * bserecords.sfidl (GConfig): added config option invert_sustain to
        support sustain pedals which report inverted sustain events.

svn path=/trunk/; revision=823

--- a/TODO
+++ b/TODO
@@ -32,6 +32,7 @@ FIXMES:
 - preference boundary values can cause assertions
 - sample chunk display should show note names not only midi notes
 - hotkey in piano roll to replay project
+- support [-- Raw --- (big/little) (c=2) (mix=44100) (8/12/16/32) ---] box in wave loader dialog
 
 URGENT:
 - support pspec groups in idl files [stefan]
