introduce activation state. added state notification.
Mon Jan  6 00:16:17 2003  Tim Janik  <timj@gtk.org>

        * bseproject.[hcp]*: introduce activation state. added state
        notification.

svn path=/trunk/; revision=825

--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,8 @@
+Mon Jan  6 00:16:17 2003  Tim Janik  <timj@gtk.org>
+
+	* bseproject.[hcp]*: introduce activation state. added state
+	notification.
+
 Sat Jan  4 15:34:28 2003  Tim Janik  <timj@gtk.org>
 
 	* bsemidireceiver.c (process_midi_control_L): 
