--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,7 @@ Overview of Changes in BEAST/BSE 0.4.2:
 * Generate structure documentation [Timj, Alper]
 * Added documentation about Gtk+ GUI extensions
 * Made documentation browser navigatable
+* Imporved MIDI support
 * Major code cleanups, bug fixes and refactoring
 * Lots of GUI bug fixes, improvements and revamps
 * Bug fixes and major cleanups
