--- a/TODO
+++ b/TODO
@@ -32,6 +32,8 @@ FIXMES:
 - preference boundary values can cause assertions
 - sample chunk display should show note names not only midi notes
 - hotkey in piano roll to replay project
+- bstusermessage.c:user_message() signal handler takes choice argument
+- fix engine deinitialization assertions in bseserver.c
 - support [-- Raw --- (big/little) (c=2) (mix=44100) (8/12/16/32) ---] box in wave loader dialog
 
 URGENT:
